Fix scrollbar appearing by accident

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; overscroll-behavior-x: contain; }
+html, body { height: 100%; overscroll-behavior-x: contain; overflow: hidden !important; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
